# tangent

./: Cargo.toml  LICENSE  README.md  build.sh  todo.md  •
src/: lexicon.txt  main.rs
